--- a/index.html
+++ b/index.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Trivision TV Proxy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { margin:0; overflow:hidden; background:black; }
-    video { width:100vw; height:100vh; object-fit:cover; background:black; }
-    .status {
-      position:fixed; bottom:10px; left:50%; transform:translateX(-50%);
-      color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;
-    }
-  </style>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<meta charset="UTF-8">
+<title>Trivision TV Multi-Quality</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body { margin:0; overflow:hidden; background:black; font-family: Arial, sans-serif; }
+video { width:100vw; height:100vh; object-fit:cover; background:black; }
+.topbar {
+  position:fixed; top:0; left:0; width:100%; height:50px;
+  background: rgba(0,0,0,0.5); display:flex; align-items:center; padding:0 12px; box-sizing:border-box; z-index:10;
+}
+.logo {
+  width:40px; height:40px; background:#ffcc00; border-radius:4px;
+  display:flex; align-items:center; justify-content:center;
+  font-weight:bold; color:black; font-size:16px; margin-right:10px;
+  opacity:0.8; animation: pulse 2s infinite;
+}
+@keyframes pulse { 0%,100%{opacity:0.8;} 50%{opacity:1;} }
+.title { color:white; font-size:18px; font-weight:bold; }
+.status {
+  position:fixed; bottom:10px; left:50%; transform:translateX(-50%);
+  color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;
+}
+.button-reconnect {
+  position: fixed; top:60px; right:10px; z-index:10;
+  padding:5px 10px; font-size:14px; font-weight:bold; border:none; border-radius:4px;
+  background:#ffcc00; color:black; cursor:pointer;
+}
+</style>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
 
-<video id="video" autoplay playsinline controls muted></video>
+<div class="topbar">
+  <div class="logo">TV</div>
+  <div class="title">Trivision</div>
+</div>
+
+<video id="video" autoplay playsinline muted></video>
 <div class="status" id="status">Conectando...</div>
+<button class="button-reconnect" id="btnReconnect">Reconectar</button>
 
 <script>
 const video = document.getElementById('video');
 const status = document.getElementById('status');
-const streamURL = "https://liveingesta318.cdnmedia.tv/trivisionlive/rtmp01-900/chunklist.m3u8?DVR";
+const masterPlaylist = "trivision-master.m3u8"; // o URL completo si está en Netlify
 let hls;
 
 function setStatus(text){ status.textContent = text; }
@@ -33,7 +56,7 @@ function startPlayer(){
   
   if(Hls.isSupported()){
     hls = new Hls();
-    hls.loadSource(streamURL);
+    hls.loadSource(masterPlaylist);
     hls.attachMedia(video);
 
     hls.on(Hls.Events.MANIFEST_PARSED, ()=>{
@@ -44,13 +67,13 @@ function startPlayer(){
 
     hls.on(Hls.Events.ERROR, (event, data)=>{
       if(data.fatal){
-        setStatus('Error, reconectando...');
+        setStatus('Error de reproducción, reconectando...');
         hls.destroy();
         setTimeout(startPlayer,3000);
       }
     });
   } else if(video.canPlayType('application/vnd.apple.mpegurl')){
-    video.src = streamURL;
+    video.src = masterPlaylist;
     video.onloadedmetadata = ()=>{ video.play(); setStatus('Reproduciendo'); };
   } else {
     setStatus('Tu dispositivo no soporta HLS');
@@ -58,6 +81,10 @@ function startPlayer(){
 }
 
 startPlayer();
+
+document.getElementById('btnReconnect').addEventListener('click', ()=>{
+  startPlayer();
+});
 </script>
 
 </body>
