--- a/index.html
+++ b/index.html
@@ -11,81 +11,9 @@ video { width:100vw; height:100vh; object-fit:cover; background:black; }
   position:fixed; top:0; left:0; width:100%; height:50px;
   background: rgba(0,0,0,0.5); display:flex; align-items:center; padding:0 12px; box-sizing:border-box; z-index:10;
 }
-.logo {
-  width:40px; height:40px; background:#ffcc00; border-radius:4px;
-  display:flex; align-items:center; justify-content:center;
-  font-weight:bold; color:black; font-size:16px; margin-right:10px;
-  opacity:0.8; animation: pulse 2s infinite;
-}
-@keyframes pulse { 0%,100%{opacity:0.8;} 50%{opacity:1;} }
+.logo { width:40px; height:40px; background:#ffcc00; border-radius:4px; display:flex; align-items:center; justify-content:center; font-weight:bold; color:black; font-size:16px; margin-right:10px; opacity:0.8; animation: pulse 2s infinite;}
+@keyframes pulse {0%,100%{opacity:0.8;}50%{opacity:1;}}
 .title { color:white; font-size:18px; font-weight:bold; }
-.status {
-  position:fixed; bottom:10px; left:50%; transform:translateX(-50%);
-  color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;
-}
-.button-reconnect {
-  position: fixed; top:60px; right:10px; z-index:10;
-  padding:5px 10px; font-size:14px; font-weight:bold; border:none; border-radius:4px;
-  background:#ffcc00; color:black; cursor:pointer;
-}
-</style>
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-</head>
-<body>
-
-<div class="topbar">
-  <div class="logo">TV</div>
-  <div class="title">Trivision</div>
-</div>
-
-<video id="video" autoplay playsinline muted></video>
-<div class="status" id="status">Conectando...</div>
-<button class="button-reconnect" id="btnReconnect">Reconectar</button>
-
-<script>
-const video = document.getElementById('video');
-const status = document.getElementById('status');
-const masterPlaylist = "trivision-master.m3u8"; // o URL completo si está en Netlify
-let hls;
-
-function setStatus(text){ status.textContent = text; }
-
-function startPlayer(){
-  setStatus('Conectando...');
-  if(hls){ hls.destroy(); }
-  
-  if(Hls.isSupported()){
-    hls = new Hls();
-    hls.loadSource(masterPlaylist);
-    hls.attachMedia(video);
-
-    hls.on(Hls.Events.MANIFEST_PARSED, ()=>{
-      video.muted=false;
-      video.play().catch(()=>{ video.muted=true; video.play(); });
-      setStatus('Reproduciendo');
-    });
-
-    hls.on(Hls.Events.ERROR, (event, data)=>{
-      if(data.fatal){
-        setStatus('Error de reproducción, reconectando...');
-        hls.destroy();
-        setTimeout(startPlayer,3000);
-      }
-    });
-  } else if(video.canPlayType('application/vnd.apple.mpegurl')){
-    video.src = masterPlaylist;
-    video.onloadedmetadata = ()=>{ video.play(); setStatus('Reproduciendo'); };
-  } else {
-    setStatus('Tu dispositivo no soporta HLS');
-  }
-}
-
-startPlayer();
-
-document.getElementById('btnReconnect').addEventListener('click', ()=>{
-  startPlayer();
-});
-</script>
-
-</body>
-</html>
+.status { position:fixed; bottom:50px; left:50%; transform:translateX(-50%); color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;}
+.button-reconnect { position:fixed; top:60px; right:10px; z-index:10; padding:5px 10px; font-size:14px; font-weight:bold; border:none; border-radius:4px; background:#ffcc00; color:black; cursor:pointer;}
+.select-quality { position:fixed; top:60px; left:10px; z-index:10; padding:5px 10px; font-size:1
