Update title and style for Trivision TV embed

--- a/index.html
+++ b/index.html
@@ -2,18 +2,60 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Trivision TV Multi-Quality</title>
+<title>Trivision TV - Embed</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body { margin:0; overflow:hidden; background:black; font-family: Arial, sans-serif; }
-video { width:100vw; height:100vh; object-fit:cover; background:black; }
+iframe { width:100vw; height:100vh; border:none; }
 .topbar {
   position:fixed; top:0; left:0; width:100%; height:50px;
   background: rgba(0,0,0,0.5); display:flex; align-items:center; padding:0 12px; box-sizing:border-box; z-index:10;
 }
-.logo { width:40px; height:40px; background:#ffcc00; border-radius:4px; display:flex; align-items:center; justify-content:center; font-weight:bold; color:black; font-size:16px; margin-right:10px; opacity:0.8; animation: pulse 2s infinite;}
+.logo {
+  width:40px; height:40px; background:#ffcc00; border-radius:4px;
+  display:flex; align-items:center; justify-content:center;
+  font-weight:bold; color:black; font-size:16px; margin-right:10px;
+  opacity:0.8; animation: pulse 2s infinite;
+}
 @keyframes pulse {0%,100%{opacity:0.8;}50%{opacity:1;}}
 .title { color:white; font-size:18px; font-weight:bold; }
-.status { position:fixed; bottom:50px; left:50%; transform:translateX(-50%); color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;}
-.button-reconnect { position:fixed; top:60px; right:10px; z-index:10; padding:5px 10px; font-size:14px; font-weight:bold; border:none; border-radius:4px; background:#ffcc00; color:black; cursor:pointer;}
-.select-quality { position:fixed; top:60px; left:10px; z-index:10; padding:5px 10px; font-size:1
+.status {
+  position:fixed; bottom:50px; left:50%; transform:translateX(-50%);
+  color:white; background:rgba(0,0,0,0.6); padding:5px 10px; border-radius:5px; font-weight:bold; z-index:10;
+}
+.button-reconnect {
+  position:fixed; top:60px; right:10px; z-index:10;
+  padding:5px 10px; font-size:14px; font-weight:bold; border:none; border-radius:4px;
+  background:#ffcc00; color:black; cursor:pointer;
+}
+</style>
+</head>
+<body>
+
+<div class="topbar">
+  <div class="logo">TV</div>
+  <div class="title">Trivision</div>
+</div>
+
+<iframe id="player" src="https://instantvideocloud.net/embed/tu_canal_id" allowfullscreen allow="autoplay; fullscreen"></iframe>
+<div class="status" id="status">Cargando...</div>
+<button class="button-reconnect" id="btnReconnect">Reconectar</button>
+
+<script>
+const status = document.getElementById('status');
+const iframe = document.getElementById('player');
+
+function setStatus(text){ status.textContent = text; }
+
+// Intentar detectar si el iframe carga correctamente
+iframe.onload = ()=>{ setStatus('Reproduciendo'); };
+
+// Reconectar
+document.getElementById('btnReconnect').addEventListener('click', ()=>{
+  setStatus('Reconectando...');
+  iframe.src = iframe.src;
+});
+</script>
+
+</body>
+</html>
