--- a/index.html
+++ b/index.html
@@ -21,5 +21,4 @@ iframe { width:100vw; height:100vh; border:none; }
 .title { color:white; font-size:18px; font-weight:bold; }
 .status {
   position:fixed; bottom:50px; left:50%; transform:translateX(-50%);
-  color:white; background:rgb
-
+  color:white; background:rgba(0,0,0,0.6); padding:5
