--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
-// proxy-hls.js
-const express = require('express');
-const request = require('request');
-const app = express();
-const PORT = process.env.PORT || 3000;
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Trivision TV - Fullscreen</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<style>
+  html,body{margin:0;padding:0;width:100%;height:100%;background:black;overflow:hidden;}
+  video{width:100%;height:100%;object-fit:cover;}
+</style>
+</head>
+<body>
 
-app.get('/stream.m3u8', (req, res) => {
-  const url = 'https://liveingesta318.cdnmedia.tv/trivisionlive/rtmp01-900/chunklist.m3u8?DVR';
-  req.pipe(request(url)).pipe(res);
-});
+<video id="player" autoplay playsinline controls></video>
 
-app.listen(PORT, () => {
-  console.log(`Proxy HLS corriendo en http://localhost:${PORT}`);
-});
+<script>
+const video = document.getElementById('player');
+const streamURL = 'https://tudominio.com/stream.m3u8'; // proxy limpio
+
+if(Hls.isSupported()){
+  const hls = new Hls();
+  hls.loadSource(streamURL);
+  hls.attachMedia(video);
+  hls.on(Hls.Events.MANIFEST_PARSED, () => {
+    video.play();
+  });
+  hls.on(Hls.Events.ERROR, (event, data) => {
+    if(data.fatal){
+      hls.destroy();
+      setTimeout(()=>{ location.reload(); }, 10000); // reconexión 10s
+    }
+  });
+}else if(video.canPlayType('application/vnd.apple.mpegurl')){
+  video.src = streamURL;
+  video.addEventListener('loadedmetadata', ()=>video.play());
+}
+</script>
+
+</body>
+</html>
