--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
-const fetch = require('node-fetch');
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Trivision TV - Fullscreen</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<style>
+  html, body { margin:0; padding:0; width:100%; height:100%; background:black; overflow:hidden; }
+  video { width:100%; height:100%; object-fit:cover; background:black; }
+</style>
+</head>
+<body>
 
-exports.handler = async (event, context) => {
-  const target = 'https://liveingesta318.cdnmedia.tv/trivisionlive/rtmp01-900/chunklist.m3u8?DVR';
+<video id="player" autoplay playsinline controls></video>
 
-  try {
-    const response = await fetch(target);
-    const body = await response.text();
+<script>
+const video = document.getElementById('player');
+const streamURL = 'https://tusitio.netlify.app/.netlify/functions/proxy'; // proxy limpio
 
-    return {
-      statusCode: 200,
-      headers: {
-        'Content-Type': 'application/vnd.apple.mpegurl',
-        'Access-Control-Allow-Origin': '*', // importante para WebView / HLS.js
-      },
-      body,
-    };
-  } catch (error) {
-    return {
-      statusCode: 500,
-      body: 'Error fetching stream: ' + error.message,
-    };
+function startHLS() {
+  if (Hls.isSupported()) {
+    const hls = new Hls();
+    hls.loadSource(streamURL);
+    hls.attachMedia(video);
+    hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
+    hls.on(Hls.Events.ERROR, (event, data) => {
+      if (data.fatal) {
+        hls.destroy();
+        setTimeout(startHLS, 10000); // reconexión automática 10s
+      }
+    });
+  } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+    video.src = streamURL;
+    video.addEventListener('loadedmetadata', ()=>video.play());
   }
-};
+}
+
+startHLS();
+</script>
+
+</body>
+</html>
